--- a/05-Bundlers/homework/index.html
+++ b/05-Bundlers/homework/index.html
@@ -20,7 +20,7 @@
         <div class="marker" id="brown"></div>
     </div>
     <script src="bundle.js"></script>
-<!-- 
+<!-- cambiamos todo a un solo codigo
     <script src="/socket.io/socket.io.js"></script>
     <script src="event-emitter.js"></script>
     <script src="whiteboard.js"></script>
